alignment fix

--- a/client/stylus/app.commons.styl
+++ b/client/stylus/app.commons.styl
@@ -421,6 +421,10 @@ button.editor-button
     margin-bottom     4px
     fr()
 
+  .member-details
+    .button-container
+      margin-top      4px
+
 .small-text
   font-size       80%
 
